--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -6,13 +6,14 @@
   height: 100vh;
 }
 
-.popup__opened {
+.popup_opened {
   display: flex;
 }
 
 .popup__container {
   position: relative;
   background-color: #fff;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   max-width: 430px;
   margin: auto auto;
   padding: 34px 36px 36.51px;
@@ -23,6 +24,18 @@
 .popup__title {
   color: #000;
   margin: 0;
-  line-height: 0.592;
+  line-height: 1.21;
   margin-bottom: 54px;
+}
+
+@media screen and (max-width: 580px) {
+  .popup__container {
+    max-width: 282px;
+    padding: 25px 22px;
+  }
+
+  .popup__title {
+    font-size: 18px;
+    margin-bottom: 76px;
+  }
 }
